--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,11 +21,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" /> -->
     <link
       href="https://fonts.googleapis.com/css?family=Libre+Baskerville:wght@700|Josefin+Slab:ital,wght@1,700|Pacifico|Satisfy|Enriqueta|Indie+Flower|Montserrat&display=swap"
       rel="stylesheet"
