--- a/client/public/index.html
+++ b/client/public/index.html
@@ -61,6 +61,10 @@
       rel="stylesheet"
       hred="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/checkbox.min.css"
     />
+    <link
+      rel="stylesheet"
+      hred="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/table.min.css"
+    />
     <title>Foodle</title>
   </head>
   <body>
