--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=Bebas+Neue|Open+Sans+Condensed:300|Raleway|Teko|Ibarra+Real+Nova|Libre+Baskerville:wght@700|Josefin+Slab:ital,wght@1,700|Pacifico|Satisfy|Enriqueta|Indie+Flower|Montserrat&display=swap"
+      href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:ital,wght@1,600|Nunito:wght@700|Bebas+Neue|Open+Sans+Condensed:300|Raleway|Teko|Ibarra+Real+Nova|Libre+Baskerville:wght@700|Josefin+Slab:ital,wght@1,700|Pacifico|Satisfy|Enriqueta|Indie+Flower|Montserrat&display=swap"
       rel="stylesheet"
     />
     <link
