Added Follow, Start Github buttons

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,7 +38,7 @@
       rel="stylesheet"
       href=" https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css"
     />
-
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>Foodle</title>
   </head>
   <body>
